# tiny-lfm-builtin

./: .gitattributes  .gitignore  Cargo.toml  model-q4.gguf  pyproject.toml  terminal_conversation.py  test_async_server.py  test_batch_chat.py  test_generation_with_kv_caching.py  test_parallel.py  test_raw_completion.py  tiny_lfm.py
.github/workflows/: release.yml
src/: lib.rs  model.rs
