[package]
name = "tiny_lfm_builtin"
version = "0.0.1"
edition = "2021"

[lib]
name = "tiny_lfm_builtin"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23.3", features = ["extension-module"] }
candle-core = "0.8.2"
candle-nn = "0.8.2"
candle-transformers = "0.8.2"
tokenizers = { version = "0.21.0", features = ["onig"] }
minijinja = { version = "2.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
safetensors = "0.4"
clap = { version = "4.4", features = ["derive"] }
num_cpus = "1.0"
rayon = "1.10"

# MAX PERFORMANCE SETTINGS
[profile.release]
lto = "fat"        # Link Time Optimization (Takes longer to compile, runs faster)
codegen-units = 1  # Allows better inlining across the whole crate
panic = "abort"    # Removes stack unwinding checks
opt-level = 3      # Max optimization